Header y contenedor 1 e imagenes.
Se integran estilos iniciales a header y contenedor 1, organizando espacios. Se agregaron además las imágenes para el proyecto.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
 
         <div class="izquierda">
-            <img scr="" alt="altar">
+            <img src="images/longgirl.jpeg" alt="altar">
         </div>
 
     </div>
