Se cambia la primera foto

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         
         <div class="fotos">
             <div class="fotoydescripcion">
-                <img src="images/disfraz.jpeg" alt="foto">
-                <p>Siempre se preocupa por el resto</p>
+                <img src="images/velas.jpeg" alt="foto">
+                <p>Siempre al borde del caos</p>
             </div>
 
             <div class="fotoydescripcion">
